# session-mem

./: .gitignore  AGENTS.md  README.md  findings.md  progress.md  pyproject.toml  task_plan.md  单会话级临时记忆系统（Session-scoped Working Memory）技术方案.md
session-mem-main/: README.md  pyproject.toml
session-mem-main/benchmarks/: __init__.py  data_loader.py  locomo_runner.py  metrics.py  prompt_assembler.py
session-mem-main/src/session_mem/: __init__.py  config.py
session-mem-main/src/session_mem/core/: boundary_detector.py  buffer.py  cell.py  cell_generator.py  memory_system.py  meta_cell_generator.py  working_memory.py
session-mem-main/src/session_mem/integrations/: langchain_memory.py
session-mem-main/src/session_mem/llm/: __init__.py  base.py  parser.py  prompts.py  qwen_client.py
session-mem-main/src/session_mem/retrieval/: __init__.py  hybrid_search.py  query_rewriter.py
session-mem-main/src/session_mem/storage/: __init__.py  base.py  sqlite_backend.py
session-mem-main/src/session_mem/utils/: __init__.py  tokenizer.py
session-mem-main/tests/: conftest.py  test_benchmark.py  test_boundary_detector.py  test_buffer.py  test_cell_generator.py  test_memory_system.py  test_meta_cell_generator.py  test_parser.py  test_qwen_client.py  test_retrieval.py  test_storage.py  test_tokenizer.py
src/session_mem/core/: __init__.py  buffer.py  memory_system.py  working_memory.py
src/session_mem/integrations/: __init__.py
src/session_mem/llm/: parser.py  prompts.py
src/session_mem/retrieval/: hybrid_search.py
